--- a/Report.html
+++ b/Report.html
@@ -337,6 +337,9 @@ div.tocify {
   <a href="Stars.html">Rating Analyze</a>
 </li>
 <li>
+  <a href="Model-building.html">Model Building</a>
+</li>
+<li>
   <a href="https://yt4617.shinyapps.io/shiny_dashboard_template/">Get your customized restaurant</a>
 </li>
 <li>
@@ -811,11 +814,11 @@ within the selected city. Color intensity reflects the number of
 reviews, allowing users to gauge popularity by geographic area.</p></li>
 <li><p><strong>Category Frequency</strong>: Shows the distribution of
 restaurant categories across the city, enabling users to identify
-popular cuisines.</p></li>
+popular cuisines if they have’t decided about category yet.</p></li>
 <li><p><strong>Price and Rating Distribution</strong>: Highlights the
 relationship between price range and star ratings. Users can see the
-distribution of restaurants grouped by star ratings and price per
-person.</p></li>
+distribution of restaurants grouped by star ratings and price per person
+to help them know the actual price range and stars.</p></li>
 </ul>
 <p>Below is a screenshot to illustrate it.</p>
 <p><img src="picture/shiny.jpg" /></p>
